--- a/src/index.tmpl
+++ b/src/index.tmpl
@@ -13,9 +13,15 @@
     #content
       %h1.firstHeading#firstHeading Référentiel des concepts, pratiques et compétences agiles
       #bodyContent
-        %h2 Fiches par ordre alphabétique
+        %h2 Voir par
+        %ul
+          %li
+            %a(href="index_alpha.html") ordre alphabétique
+          %li
+            %a(href="index_type.html") type
+        %h2 Fiches par {{order}}
         {{#parts}}
-        %h3 {{letter}}
+        %h3 {{group}}
         %ul
         {{#values}}
         {{^full}}
