--- a/views/biblio.tmpl
+++ b/views/biblio.tmpl
@@ -4,23 +4,48 @@
     %title Référentiel des pratiques Agiles
     %link{:rel=>"stylesheet", :type=>'text/css', :href=>"images/referentiel.css"}
   %body
-    #header
-      %h1#logo
-        Institut
-        %span.green Agile
-    #header-wrap
-      %img.header-photo{:src=>"images/headerphoto.jpg", :width=>"820", :height=>"120"}
-    #content
-      %h1.firstHeading#firstHeading Référentiel des concepts, pratiques et compétences agiles
-      #bodyContent
-        %h2 Bibliographie
-        {{#parts}}
-        %h3 {{title}}
+    #wrap
+      #header
+        %h1#logo
+          Institut
+          %span.green Agile
+        %h2#slogan
+          Une informatique plus humaine et plus efficace...
         %ul
-        {{#bibs}}
           %li
-            {{author}}
-            %i {{title}}
-            ,{{year}}
-        {{/bibs}}
-        {{/parts}}
+            %a{:href=>"http://institut-agile.fr/"}
+              %span
+                L'Institut
+          %li#current
+            %a{:href=>"http://referentiel.institut-agile.fr/"}
+              %span
+                Les pratiques agiles
+          %li
+            %a{:href=>"http://blog.institut-agile.fr/"}
+              %span
+                Le blog
+      #header-wrap
+        %img.header-photo{:src=>"images/headerphoto.jpg", :width=>"820", :height=>"120"}
+      #content
+        %h1.firstHeading#firstHeading Référentiel des concepts, pratiques et compétences agiles
+        #bodyContent
+          %h2 Bibliographie
+          {{#parts}}
+          %h3 {{title}}
+          %ul
+          {{#bibs}}
+          {{#bdsk-url-1}}
+            %li
+              %a{:href=>"{{bdsk-url-1}}"}
+                %i {{title}}
+                ({{author}},
+                {{year}})
+          {{/bdsk-url-1}}
+          {{^bdsk-url-1}}
+            %li
+              %i {{title}}
+              ({{author}},
+              {{year}})
+          {{/bdsk-url-1}}
+          {{/bibs}}
+          {{/parts}}
