Add UserVoice support

--- a/views/practice.tmpl
+++ b/views/practice.tmpl
@@ -38,3 +38,10 @@
               {{to_s}}
               {{/text}}
           {{/sections}}
+  <script type="text/javascript">
+  (function() {
+  var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+  uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/XOcYOECsnbd4w993r6F52Q.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+  })();
+  </script>
