--- a/book/assets/book.css
+++ b/book/assets/book.css
@@ -60,8 +60,8 @@ a { text-decoration: none; color: black }
 
 /* cross-references */
 
-a.pageref::after { content: " on page " target-counter(attr(href), page); }
-a.chapref::before { content: " Chapter " target-counter(attr(href), chapter) ", "; }
+a.pageref::after { content: " en page " target-counter(attr(href), page); }
+a.chapref::before { content: " Chapitre " target-counter(attr(href), chapter) ", "; }
 a.figref { content: " Figure " target-counter(attr(href), figure); }
 a.tableref { content: " Table " target-counter(attr(href), figure); }
 
@@ -301,7 +301,7 @@ div.frontcover, div.halftitlepage, div.titlepage { page-break-before: right }
 div.imprint { page-break-before: always }
 div.dedication, div.foreword, div.toc, div.preface, div.chapter, div.reference, 
 div.appendix, div.bibliography, div.glossary, div.index, div.colophon { 
-  page-break-before: always 
+  page-break-before: always;
 }
 div.backcover { page-break-before: left }
 
@@ -392,7 +392,7 @@ ul.toc > li.endmatter a::after {
   font-style: normal;
 }
 ul.toc > li.chapter::before {
-  content: "Chapter " counter(toc-chapter, decimal);
+  content: "Chapitre " counter(toc-chapter, decimal);
   display: block;
   margin: 1em 0 0.1em -2.5cm;
   font-weight: normal;
@@ -411,14 +411,14 @@ h1::before {
   content: "\B0  \B0  \B0  \B0  \B0 \A";  /* ornaments */
 }
 
-div.chapter h1::before { content: "Chapter " counter(chapter) " \A"; }
+div.chapter h1::before { content: "Chapitre " counter(chapter) " \A"; }
 
 div.frontcover h1::before, div.titlepage h1::before, div.halftitlepage h1::before {
   content: normal;                  /* that is, none */
 }
 
 h1 { string-set: header content();}
-div.chapter h1 { string-set: header "Chapter " counter(chapter) ": " content(); }
+div.chapter h1 { string-set: header "Chapitre " counter(chapter) ": " content(); }
 
 /* index */
 
