--- a/views/practice-book.tmpl
+++ b/views/practice-book.tmpl
@@ -1,6 +1,6 @@
 !!! XML
 !!!
-%div.chapter{:xmlns=>"http://www.w3.org/1999/xhtml"}
+%div#{{id}}.chapter{:xmlns=>"http://www.w3.org/1999/xhtml"}
   %h1 {{title}}
   %h4 {{type}}
   {{#sections}}
