Migrate to dynamic site, targeting Heroku hosting - use Ruby 1.8.7 for static gen - use Ruby 1.9.2 for dynamic Encoding adjustments As of 1.9.2 !String.responds_to? :map, hence splitting

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,7 +1,7 @@
 !!! Strict
 %html
   %head
-    %title Référentiel des pratiques Agiles
+    %title RÃ©fÃ©rentiel des pratiques Agiles
     %link{:rel=>"stylesheet", :type=>'text/css', :href=>"images/referentiel.css"}
   %body
     #wrap
@@ -27,12 +27,12 @@
       #header-wrap
         %img.header-photo{:src=>"images/headerphoto.jpg", :width=>"820", :height=>"120"}
       #content
-        %h1.firstHeading#firstHeading Référentiel des concepts, pratiques et compétences agiles
+        %h1.firstHeading#firstHeading RÃ©fÃ©rentiel des concepts, pratiques et compÃ©tences agiles
         #bodyContent
           %h2 Voir par
           %ul
             %li
-              %a(href="index_alpha.html") ordre alphabétique
+              %a(href="index_alpha.html") ordre alphabÃ©tique
             %li
               %a(href="index_type.html") type
           %h2 Fiches par {{order}}
