--- a/views/practice.tmpl
+++ b/views/practice.tmpl
@@ -1,7 +1,7 @@
 !!! Strict
 %html
   %head
-    %title Référentiel des pratiques Agiles
+    %title RÃ©fÃ©rentiel des pratiques Agiles
     %link{:rel=>"stylesheet", :type=>'text/css', :href=>"images/referentiel.css"}
   %body
     #wrap
