--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title Référentiel des pratiques Agiles
-    %link{:rel=>"stylesheet", :type=>'text/css', :href=>"images/referentiel.css"}
+    %link{:rel=>"stylesheet", :type=>'text/css', :href=>"assets/referentiel.css"}
   %body
     #wrap
       #header
@@ -25,7 +25,7 @@
               %span
                 Le blog
       #header-wrap
-        %img.header-photo{:src=>"images/headerphoto.jpg", :width=>"820", :height=>"120"}
+        %img.header-photo{:src=>"assets/headerphoto.jpg", :width=>"820", :height=>"120"}
       = yield
     <script type="text/javascript">
     (function() {
