--- a/site/assets/referentiel.css
+++ b/site/assets/referentiel.css
@@ -37,6 +37,10 @@ body {
         color: #6297BC; 
 	border: none;
 }
+#header h1#logo a {
+   color: #6297BC; 
+   text-decoration:none;
+}
 
 #header h2#slogan {        
 	position: absolute;	 
@@ -65,14 +69,14 @@ body {
    display:inline;
    margin:0; padding:0;
 }
-#header a {
+#header li a {
    float:left;
    background: url(tableft.gif) no-repeat left top;
    margin:0;
    padding:0 0 0 4px;
    text-decoration:none;
 }
-#header a span {
+#header li a span {
    float:left;
    display:block;
    background: url(tabright.gif) no-repeat right top;
@@ -82,13 +86,13 @@ body {
 /* Commented Backslash Hack hides rule from IE5-Mac \*/
 #header a span {float:none;}
 /* End IE5-Mac hack */
-#header a:hover span {
+#header li a:hover span {
 	color:#FFF;
 }
-#header a:hover {
+#header li a:hover {
    background-position:0% -42px;
 }
-#header a:hover span {
+#header li a:hover span {
    background-position:100% -42px;
 }
 #header #current a {
@@ -102,8 +106,43 @@ body {
 /* end menu tabs */
 
 #status {
-	font-size: 0.6em;
+	font-size: 0.8em;
 }
+
+/* sidebar */
+#sidebar {
+	margin: 0; padding: 0; 
+	display: inline;		
+}
+
+#sidebar ul.sidemenu {
+	font-size: 0.8em;
+	list-style:none;
+	margin:10px 0 10px 15px;
+	padding:0;		
+}
+#sidebar ul.sidemenu li {
+	margin-bottom:1px;
+	border: 1px solid #f2f2f2;
+}
+#sidebar ul.sidemenu a {
+	display:block;
+	font-weight:bold;
+	color: #333;	
+	text-decoration:none;	
+	padding:3px 5px 3px 10px;
+	background: #f2f2f2;
+	border-left:4px solid #CCC;	
+	min-height:18px;
+}
+
+#sidebar ul.sidemenu a:hover {
+	padding:3px 5px 3px 10px;
+	background: #f2f2f2;
+	color: #339900;
+	border-left:4px solid #9EC630;
+}
+
 
 /* Content */
 #content {
