Oops: can't delete jQuery!

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
     %title Référentiel des pratiques Agiles
     %link{:rel=>"stylesheet", :type=>'text/css', :href=>"assets/referentiel.css"}
     %link{:rel=>"stylesheet", :type=>'text/css', :href=>"assets/grid.css"}
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   %body
     #wrap
       #header-wrap
