Tweak home link

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,7 +10,7 @@
       #header-wrap
         #header
           %h1#logo
-            %a{:href=>"http://referentiel.institut-agile.fr/"}
+            %a{:href=>"http://#{request.host_with_port}/"}
               Institut
               %span.green Agile
           %h2#slogan
