Move header-photo to css to avoid error when using souligner.js on other sites

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title Référentiel des pratiques Agiles
-    %link{:rel=>"stylesheet", :type=>'text/css', :href=>"assets/referentiel.css"}
-    %link{:rel=>"stylesheet", :type=>'text/css', :href=>"assets/grid.css"}
+    %link{:rel=>"stylesheet", :type=>'text/css', :href=>"/assets/referentiel.css"}
+    %link{:rel=>"stylesheet", :type=>'text/css', :href=>"/assets/grid.css"}
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   %body
     #wrap
@@ -20,7 +20,7 @@
               %a{:href=>"http://referentiel.institut-agile.fr/"}
                 %span
                   Les pratiques agiles
-      %img.header-photo{:src=>"assets/headerphoto.jpg", :width=>"820", :height=>"120"}
+      %div.header-photo
 
       #content
         .container_10.clearfix
