--- a/site/assets/referentiel.css
+++ b/site/assets/referentiel.css
@@ -41,6 +41,11 @@ body {
    color: #6297BC; 
    text-decoration:none;
 }
+.header-photo {
+  background-image: url(headerphoto.jpg?1);
+  height: 120px;
+  width: 820px;
+}
 
 #header h2#slogan {        
 	position: absolute;	 
@@ -147,7 +152,7 @@ body {
 /* Content */
 #content {
 	padding: 1em;
-	background-image: url(assets/border.png?1);
+	background-image: url(border.png?1);
 	background-position: top left;
 	background-repeat: repeat-y;
 	background-color: white;
@@ -292,7 +297,7 @@ ul {
 	list-style-type: square;
 	margin: .3em 0 0 1.5em;
 	padding: 0;
-	list-style-image: url(assets/bullet-icon.png?1);
+	list-style-image: url(bullet-icon.png?1);
 }
 ol {
 	line-height: 1.5em;
@@ -553,7 +558,7 @@ div#bodyContent {
 
 
 div.vectorTabs ul {
-	background-image:url(assets/tab-break.png?1);
+	background-image:url(tab-break.png?1);
 	background-position:right bottom;
 	background-repeat:no-repeat;
 }
